syntax = "proto3";

package go.micro.service.comment;

service CommentService {
	rpc GetComments(GetCommentsReq) returns (GetCommentsResp) {}
    rpc AddComment(AddCommentReq) returns (Resp) {}
}

message Comment {
    int32 id = 1;           // 评价id
	int32 userID = 2;       // 评价用户id
	int32 productID = 3;    // 评价商品id
	string content = 4;     // 评价内容
	string createTime = 5;  // 评价创建时间
}

message GetCommentsReq {
	int32 productID = 1;
}

message AddCommentReq {
	Comment comment = 1;
}

message GetCommentsResp {
    int32 code = 1;
    string msg = 2;
    repeated Comment comments = 3;
}

message Resp {
    int32 code = 1;
    string msg = 2;
    string data = 3;
}
